@@ -39,4 +39,8 @@ irc.plugins.5=org.drftpd.sitebot.Stats
 irc.plugins.6=org.drftpd.sitebot.Bandwidth
 irc.plugins.7=org.drftpd.sitebot.Diskfree
 irc.plugins.8=org.drftpd.sitebot.OnConnect
-irc.plugins.9=org.drftpd.sitebot.Kick
+irc.plugins.9=org.drftpd.sitebot.Ident
+irc.plugins.10=net.drmods.plugins.irc.Kick
+irc.plugins.11=net.drmods.plugins.irc.Approve
+
+
