@@ -1,3 +1,0 @@
-# $Id$
-kick.irc=${color}15${bold}KICK${coloroff}: ${idleuser} kicked -> idle ${idletime}
-kick.ftp=Kicked by !kick command in ${ircchan} by ${ircuser}
